<resources>
    <string name="app_name">7MinuteWorkout</string>
    <string name="image">image</string>
    <string name="str_start">START</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="weight_in_kg">Weight (in KG)</string>
    <string name="height_in_cm">Height (in CM)</string>
    <string name="weight_in_lbs">Weight (in lbs)</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="your_bmi">Your BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="exercise_image">Exercise image</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="end">END</string>
    <string name="exercise_successful_image">Exercise successful image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finished_the_workout">You have finished the workout!</string>
    <string name="finish">Finish</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="application_header">application header</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="history_button">history button</string>
    <string name="bmi_button">BMI button</string>
    <string name="history">History</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="this_will_stop_your_workout_are_you_sure_you_want_to_quit">This will stop your workout. are you sure you want to quit ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="pleaseEnterValidValues">Please enter valid values</string>
    <string name="calculateBmi">CALCULATE BMI</string>
    <string name="metricView">Metric View</string>
    <string name="usView">US view</string>
    <string name="VerySeverelyUnderweight">Very severely underweight</string>
    <string name="VerySeverelyUnderweightDescription">Oops! You really need to take better care of yourself! Eat more!</string>
    <string name="SeverelyUnderweight">Severely underweight</string>
    <string name="SeverelyUnderweightDescription">Oops!You really need to take better care of yourself! Eat more!</string>
    <string name="Underweight">Underweight</string>
    <string name="UnderweightDescription">Oops! You really need to take better care of yourself! Eat more!</string>
    <string name="Normal">Normal</string>
    <string name="NormalDescription">Congratulations! You are in a good shape!</string>
    <string name="Overweight">Overweight</string>
    <string name="OverweightDescription">Oops! You really need to take care of your yourself! Workout maybe!</string>
    <string name="ObeseClass1">Obese Class | (Moderately obese)</string>
    <string name="ObeseClass1Description">Oops! You really need to take care of your yourself! Workout maybe!</string>
    <string name="ObeseClass2">Obese Class || (Severely obese)</string>
    <string name="ObeseClass2Description">OMG! You are in a very dangerous condition! Act now!</string>
    <string name="ObeseClass3">Obese Class ||| (Very Severely obese)</string>
    <string name="ObeseClass3Description">OMG! You are in a very dangerous condition! Act now!</string>
    <string name="colorSelectedExerciseText">#008F24</string>
    <string name="colorCompletedExerciseText">#FFFFFF</string>
    <string name="colorNotCompletedExerciseText">#212121</string>
    <string name="colorRecycleviewHistoryEvenBackground">#EBEBEB</string>
    <string name="colorRecycleviewHistoryOddBackground">#FFFFFF</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE</string>
</resources>
