<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMIActivity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorBmiActivityToolbarBackground"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBMIActivity"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_background">


        <RadioButton
            android:id="@+id/rbMetricsUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:checked="true"
            android:button="@null"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:background="@drawable/units_tab_selector"
            android:text="@string/metric_units"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/rbUSUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:checked="false"
            android:button="@null"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:background="@drawable/units_tab_selector"
            android:text="@string/us_units"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rgUnits"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUSWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_lbs"
                android:inputType="numberDecimal"
                android:textSize="16sp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llUsHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsHeightFeet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsHeightFeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feet"
                    android:inputType="number"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsHeightInch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsHeightInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inch"
                    android:inputType="number"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBMIResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            tools:visibility="invisible">

            <TextView
                android:id="@+id/tvYourBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_bmi"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="16sp"/>

            <TextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvBMIType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvBMIDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btnCalculateBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginTop="35dp"
            android:text="@string/calculate"
            android:textColor="@color/colorBmiActivityButtonCalcText"/>

    </LinearLayout>

</RelativeLayout>