<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExerciseActivity"
        style="@style/ToolbarColoredBackArrow"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvGetReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/restProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/restProgressBar"
        layout="@layout/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUpcomingExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upcoming_exercise"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restProgressBar" />

    <TextView
        android:id="@+id/tvUpcomingExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#212121"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUpcomingExercise"
        tools:text="Exercise name" />


    <ImageView
        android:id="@+id/ivExercise"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/exercise_image"
        android:scaleType="fitXY"
        android:layout_marginBottom="100dp"
        android:src="@drawable/ic_jumping_jacks"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/toolbarExerciseActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvExerciseName"
        />

    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_exercise"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toBottomOf="@id/ivExercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/exerciseProgressBar"
        />

    <include layout="@layout/progress_bar"
        android:id="@+id/exerciseProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tvExerciseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvExerciseStatus"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>