<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBMIActivity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorBmiActivityToolbarBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBMIActivity"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarBMIActivity">


        <RadioButton
            android:id="@+id/rbMetricsUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbUSUnit"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgUnits"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUSWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_lbs"
                android:inputType="numberDecimal"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llUsHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:visibility="gone"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsHeightFeet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsHeightFeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/feet"
                    android:inputType="number"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsHeightInch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUsHeightInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inch"
                    android:inputType="number"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/tvYourBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/your_bmi"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llUnitsView" />

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYourBMI" />

    <TextView
        android:id="@+id/tvBMIType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIValue" />

    <TextView
        android:id="@+id/tvBMIDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIType" />


    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/colorBmiActivityButtonCalcText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIDescription" />


    <!--  <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilMetricWeight"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/rgUnits">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etMetricWeight"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/weight_in_kg"
              android:inputType="numberDecimal"
              android:textSize="16sp" />


      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilMetricHeight"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tilMetricWeight">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etMetricHeight"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/height_in_cm"
              android:inputType="numberDecimal"
              android:textSize="16sp" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilUSWeight"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:visibility="gone"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/rgUnits"
          tools:visibility="visible">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etUsWeight"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/weight_in_lbs"
              android:inputType="numberDecimal"
              android:textSize="16sp" />


      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilUsHeightFeet"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginEnd="5dp"
          android:layout_weight="1"
          app:layout_constraintEnd_toStartOf="@id/tilUsHeightInch"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tilUSWeight">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etUsHeightFeet"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/feet"
              android:inputType="number"
              android:textSize="16sp" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/tilUsHeightInch"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="5dp"
          android:layout_weight="1"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/tilUsHeightFeet"
          app:layout_constraintTop_toBottomOf="@id/tilUSWeight">

          <androidx.appcompat.widget.AppCompatEditText
              android:id="@+id/etUsHeightInch"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/inch"
              android:inputType="number"
              android:textSize="16sp" />


      </com.google.android.material.textfield.TextInputLayout> -->

    <!-- <TextView
        android:id="@+id/tvYourBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/your_bmi"
        android:textAllCaps="true"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYourBMI" />

    <TextView
        android:id="@+id/tvBMIType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIValue" />

    <TextView
        android:id="@+id/tvBMIDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIType" />


    <Button
        android:id="@+id/btnCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@color/colorAccent"
        android:text="@string/calculate"
        android:textColor="@color/colorBmiActivityButtonCalcText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIDescription" /> -->


</androidx.constraintlayout.widget.ConstraintLayout>